# aiSoftwareEngineeringFramework

./: .gitignore  CHANGELOG.md  CODEX_BOOTSTRAP_PROMPT.md  CONTRIBUTING.md  FRAMEWORK.yaml  README.md  ROADMAP.md  framework-inventory.json
.ai/: AGENTS.md
.ai/checklists/: AI_TASK.md  PROJECT_BOOTSTRAP.md  RELEASE.md
.ai/context/: ARCHITECTURE.md  CURRENT_CONTEXT.md  DOMAIN.md  MODULES.md  PROJECT.md  QUALITY_ATTRIBUTES.md
.ai/governance/: DECISION_POLICY.md  DEFINITION_OF_DONE.md  (+4 more)
docs/: CI_CD_STANDARD.md  CONTEXT_EFFICIENCY.md  MATURITY_MODEL.md  MIGRATION_GUIDE.md  OBSERVABILITY_STANDARD.md
examples/: README.md
examples/python-greeting-service/: FRAMEWORK.yaml  README.md  pyproject.toml
examples/python-greeting-service/.ai/: AGENTS.md
examples/python-greeting-service/.ai/context/: ARCHITECTURE.md  CURRENT_CONTEXT.md  MODULES.md  PROJECT.md
examples/python-greeting-service/.ai/decisions/adr/: 0001-python-embebido-sin-instalador.md
examples/python-greeting-service/.ai/governance/: DECISION_POLICY.md
examples/python-greeting-service/src/greeting_service/adapters/: http.py
examples/python-greeting-service/src/greeting_service/domain/: greeting.py
examples/python-greeting-service/tests/: test_greeting.py  test_http.py
extensions/: README.md
scripts/: README.md  check-placeholders.mjs  classify-change.mjs  health-score.mjs  init-project.mjs  new-adr.mjs  prepare-release.mjs  quality-gates.mjs  resolve-context.mjs  resolve-profile.mjs  validate-context.mjs  validate-links.mjs  validate-manifest.mjs  validate-modules.mjs  validate-structure.mjs
(+166 files in other folders)
